vclusters/vcluster1/vcluster1-patch/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vcluster1
  namespace: vcluster1
spec:
  rules:
  - host: vcluster1.walk1ng.tech
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: vcluster1-svc
            port:
              name: https
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    traefik.ingress.kubernetes.io/service.serverstransport: vcluster1-vcluster1-apiserver@kubernetescrd
  name: vcluster1-svc
  namespace: vcluster1
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8443
    nodePort: 31543
  selector:
    app: vcluster
  sessionAffinity: None
  type: NodePort
---
